--- a/Hoi Ultimate Bravery/Hoi Ultimate Bravery.vcxproj
+++ b/Hoi Ultimate Bravery/Hoi Ultimate Bravery.vcxproj
@@ -148,10 +148,12 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="armor.cpp" />
+    <ClCompile Include="constant.cpp" />
     <ClCompile Include="country.cpp" />
     <ClCompile Include="engine.cpp" />
     <ClCompile Include="gun.cpp" />
     <ClCompile Include="gunsize.cpp" />
+    <ClCompile Include="icon.cpp" />
     <ClCompile Include="Librairies\Imgui\imgui_stdlib.cpp" />
     <ClCompile Include="Librairies\Implot\implot.cpp" />
     <ClCompile Include="Librairies\Implot\implot_demo.cpp" />
@@ -168,6 +170,7 @@
     <ClCompile Include="Librairies\Imgui\imgui_impl_opengl3.cpp" />
     <ClCompile Include="Librairies\Imgui\imgui_tables.cpp" />
     <ClCompile Include="Librairies\Imgui\imgui_widgets.cpp" />
+    <ClCompile Include="renderer.cpp" />
     <ClCompile Include="ressources.cpp" />
     <ClCompile Include="role.cpp" />
     <ClCompile Include="settings.cpp" />
@@ -184,10 +187,12 @@
   <ItemGroup>
     <ClInclude Include="app_base.hpp" />
     <ClInclude Include="armor.hpp" />
+    <ClInclude Include="constant.hpp" />
     <ClInclude Include="country.hpp" />
     <ClInclude Include="engine.hpp" />
     <ClInclude Include="gun.hpp" />
     <ClInclude Include="gunsize.hpp" />
+    <ClInclude Include="icon.hpp" />
     <ClInclude Include="Librairies\GLFW\glfw3.h" />
     <ClInclude Include="Librairies\GLFW\glfw3native.h" />
     <ClInclude Include="Librairies\Imgui\imconfig.h" />
@@ -210,6 +215,7 @@
     <ClInclude Include="Librairies\Soil\stbi_DDS_aug_c.h" />
     <ClInclude Include="Librairies\Soil\stb_image_aug.h" />
     <ClInclude Include="my_app.hpp" />
+    <ClInclude Include="renderer.hpp" />
     <ClInclude Include="ressources.hpp" />
     <ClInclude Include="role.hpp" />
     <ClInclude Include="settings.hpp" />
