--- a/Hoi Ultimate Bravery/Assets/Data/Settings.json
+++ b/Hoi Ultimate Bravery/Assets/Data/Settings.json
@@ -1,1 +1,1 @@
-{"gamePath":"C:\\Program Files (x86)\\Steam\\steamapps\\common\\Hearts of Iron IV"}
+{"gamePath":"C:\\Program Files (x86)\\Steam\\steamapps\\common\\Hearts of Iron IV","language":"fr-fr"}
