--- a/Hoi Ultimate Bravery/imgui.ini
+++ b/Hoi Ultimate Bravery/imgui.ini
@@ -189,8 +189,8 @@ Size=120,170
 Collapsed=0
 
 [Window][generate]
-Pos=929,200
-Size=75,79
+Pos=806,200
+Size=854,210
 Collapsed=0
 
 [Window][Light]
@@ -210,26 +210,31 @@ Collapsed=0
 
 [Window][medium]
 Pos=500,200
-Size=142,238
+Size=149,238
 Collapsed=0
 
 [Window][heavy]
 Pos=750,200
-Size=170,238
+Size=142,238
 Collapsed=0
 
 [Window][superHeavy]
 Pos=1000,200
-Size=107,238
+Size=163,238
 Collapsed=0
 
 [Window][modern]
 Pos=1250,200
-Size=142,238
+Size=163,238
 Collapsed=0
 
 [Window][options]
 Pos=832,200
-Size=307,98
+Size=307,144
+Collapsed=0
+
+[Window][dlc]
+Pos=500,200
+Size=137,121
 Collapsed=0
 
