--- a/Hoi Ultimate Bravery/Hoi Ultimate Bravery.vcxproj
+++ b/Hoi Ultimate Bravery/Hoi Ultimate Bravery.vcxproj
@@ -150,6 +150,7 @@
     <ClCompile Include="armor.cpp" />
     <ClCompile Include="constant.cpp" />
     <ClCompile Include="country.cpp" />
+    <ClCompile Include="dlc.cpp" />
     <ClCompile Include="engine.cpp" />
     <ClCompile Include="gun.cpp" />
     <ClCompile Include="gunsize.cpp" />
@@ -190,6 +191,7 @@
     <ClInclude Include="armor.hpp" />
     <ClInclude Include="constant.hpp" />
     <ClInclude Include="country.hpp" />
+    <ClInclude Include="dlc.hpp" />
     <ClInclude Include="engine.hpp" />
     <ClInclude Include="files.hpp" />
     <ClInclude Include="gun.hpp" />
