--- a/Hoi Ultimate Bravery/Hoi Ultimate Bravery.vcxproj
+++ b/Hoi Ultimate Bravery/Hoi Ultimate Bravery.vcxproj
@@ -154,6 +154,7 @@
     <ClCompile Include="engine.cpp" />
     <ClCompile Include="gun.cpp" />
     <ClCompile Include="gunsize.cpp" />
+    <ClCompile Include="hull.cpp" />
     <ClCompile Include="icon.cpp" />
     <ClCompile Include="language.cpp" />
     <ClCompile Include="Librairies\Imgui\imgui_stdlib.cpp" />
@@ -172,10 +173,13 @@
     <ClCompile Include="Librairies\Imgui\imgui_impl_opengl3.cpp" />
     <ClCompile Include="Librairies\Imgui\imgui_tables.cpp" />
     <ClCompile Include="Librairies\Imgui\imgui_widgets.cpp" />
+    <ClCompile Include="module.cpp" />
     <ClCompile Include="renderer.cpp" />
     <ClCompile Include="ressources.cpp" />
     <ClCompile Include="role.cpp" />
     <ClCompile Include="settings.cpp" />
+    <ClCompile Include="ship.cpp" />
+    <ClCompile Include="shiptype.cpp" />
     <ClCompile Include="special.cpp" />
     <ClCompile Include="stats.cpp" />
     <ClCompile Include="suspension.cpp" />
@@ -185,6 +189,7 @@
     <ClCompile Include="turret.cpp" />
     <ClCompile Include="turrettype.cpp" />
     <ClCompile Include="utils.cpp" />
+    <ClCompile Include="shipversion.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="app_base.hpp" />
@@ -196,6 +201,7 @@
     <ClInclude Include="files.hpp" />
     <ClInclude Include="gun.hpp" />
     <ClInclude Include="gunsize.hpp" />
+    <ClInclude Include="hull.hpp" />
     <ClInclude Include="icon.hpp" />
     <ClInclude Include="language.hpp" />
     <ClInclude Include="Librairies\GLFW\glfw3.h" />
@@ -219,11 +225,14 @@
     <ClInclude Include="Librairies\Soil\stbi_DDS_aug.h" />
     <ClInclude Include="Librairies\Soil\stbi_DDS_aug_c.h" />
     <ClInclude Include="Librairies\Soil\stb_image_aug.h" />
+    <ClInclude Include="module.hpp" />
     <ClInclude Include="my_app.hpp" />
     <ClInclude Include="renderer.hpp" />
     <ClInclude Include="ressources.hpp" />
     <ClInclude Include="role.hpp" />
     <ClInclude Include="settings.hpp" />
+    <ClInclude Include="ship.hpp" />
+    <ClInclude Include="shiptype.hpp" />
     <ClInclude Include="special.hpp" />
     <ClInclude Include="stats.hpp" />
     <ClInclude Include="suspension.hpp" />
@@ -233,6 +242,7 @@
     <ClInclude Include="turret.hpp" />
     <ClInclude Include="turrettype.hpp" />
     <ClInclude Include="utils.hpp" />
+    <ClInclude Include="shipversion.hpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\Data\Canon.json" />
