[#3] random generation ship done with all type

--- a/Hoi Ultimate Bravery/imgui.ini
+++ b/Hoi Ultimate Bravery/imgui.ini
@@ -5,7 +5,7 @@ Collapsed=0
 
 [Window][Main Window]
 Pos=0,0
-Size=1920,1061
+Size=1920,1080
 Collapsed=0
 
 [Window][generate]
@@ -24,22 +24,82 @@ Size=1108,569
 Collapsed=0
 
 [Window][heavy]
-Pos=411,200
-Size=1108,569
+Pos=750,200
+Size=135,238
 Collapsed=0
 
 [Window][medium]
-Pos=411,200
-Size=1108,569
+Pos=500,200
+Size=198,238
 Collapsed=0
 
 [Window][modern]
-Pos=411,200
-Size=1108,569
+Pos=1250,200
+Size=135,238
 Collapsed=0
 
 [Window][destroyer]
-Pos=411,200
-Size=1108,569
+Pos=250,200
+Size=114,143
+Collapsed=0
+
+[Window][lightCruiser]
+Pos=500,200
+Size=142,162
+Collapsed=0
+
+[Window][heavyCruiser]
+Pos=500,200
+Size=191,162
+Collapsed=0
+
+[Window][tankDesigned]
+Pos=250,200
+Size=44,32
+Collapsed=0
+
+[Window][shipDesigned]
+Pos=1000,500
+Size=65,32
+Collapsed=0
+
+[Window][options]
+Pos=832,200
+Size=307,144
+Collapsed=0
+
+[Window][dlc]
+Pos=500,200
+Size=68,33
+Collapsed=0
+
+[Window][superHeavy]
+Pos=1000,200
+Size=135,238
+Collapsed=0
+
+[Window][generateAll]
+Pos=60,60
+Size=153,540
+Collapsed=0
+
+[Window][battleship]
+Pos=750,200
+Size=142,162
+Collapsed=0
+
+[Window][carrier]
+Pos=1000,200
+Size=142,124
+Collapsed=0
+
+[Window][submarine]
+Pos=1250,200
+Size=114,67
+Collapsed=0
+
+[Window][battlecruiser]
+Pos=750,200
+Size=142,162
 Collapsed=0
 
