--- a/Hoi Ultimate Bravery/Hoi Ultimate Bravery.vcxproj
+++ b/Hoi Ultimate Bravery/Hoi Ultimate Bravery.vcxproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup Label="ProjectConfigurations">
     <ProjectConfiguration Include="Debug|Win32">
@@ -174,6 +174,11 @@
     <ClCompile Include="Librairies\Imgui\imgui_tables.cpp" />
     <ClCompile Include="Librairies\Imgui\imgui_widgets.cpp" />
     <ClCompile Include="module.cpp" />
+    <ClCompile Include="plane.cpp" />
+    <ClCompile Include="planemodule.cpp" />
+    <ClCompile Include="planerole.cpp" />
+    <ClCompile Include="planetype.cpp" />
+    <ClCompile Include="planeversion.cpp" />
     <ClCompile Include="renderer.cpp" />
     <ClCompile Include="ressources.cpp" />
     <ClCompile Include="role.cpp" />
@@ -228,6 +233,11 @@
     <ClInclude Include="Librairies\Soil\stb_image_aug.h" />
     <ClInclude Include="module.hpp" />
     <ClInclude Include="my_app.hpp" />
+    <ClInclude Include="plane.hpp" />
+    <ClInclude Include="planemodule.hpp" />
+    <ClInclude Include="planerole.hpp" />
+    <ClInclude Include="planetype.hpp" />
+    <ClInclude Include="planeversion.hpp" />
     <ClInclude Include="renderer.hpp" />
     <ClInclude Include="ressources.hpp" />
     <ClInclude Include="role.hpp" />
