--- a/Hoi Ultimate Bravery/imgui.ini
+++ b/Hoi Ultimate Bravery/imgui.ini
@@ -9,13 +9,13 @@ Size=1920,1080
 Collapsed=0
 
 [Window][generate]
-Pos=960,200
+Pos=694,200
 Size=481,279
 Collapsed=0
 
 [Window][light]
 Pos=250,200
-Size=86,238
+Size=163,238
 Collapsed=0
 
 [Window][Light Tank]
@@ -25,17 +25,17 @@ Collapsed=0
 
 [Window][heavy]
 Pos=750,200
-Size=163,238
+Size=177,238
 Collapsed=0
 
 [Window][medium]
 Pos=500,200
-Size=142,238
+Size=114,238
 Collapsed=0
 
 [Window][modern]
 Pos=1250,200
-Size=205,238
+Size=142,238
 Collapsed=0
 
 [Window][destroyer]
@@ -45,12 +45,12 @@ Collapsed=0
 
 [Window][lightCruiser]
 Pos=500,200
-Size=212,162
+Size=142,162
 Collapsed=0
 
 [Window][heavyCruiser]
 Pos=500,200
-Size=191,162
+Size=142,162
 Collapsed=0
 
 [Window][tankDesigned]
@@ -60,7 +60,7 @@ Collapsed=0
 
 [Window][shipDesigned]
 Pos=1000,500
-Size=65,32
+Size=116,144
 Collapsed=0
 
 [Window][options]
@@ -75,7 +75,7 @@ Collapsed=0
 
 [Window][superHeavy]
 Pos=1000,200
-Size=135,238
+Size=156,238
 Collapsed=0
 
 [Window][generateAll]
@@ -101,5 +101,45 @@ Collapsed=0
 [Window][battlecruiser]
 Pos=750,200
 Size=142,162
+Collapsed=0
+
+[Window][small]
+Pos=411,200
+Size=1108,569
+Collapsed=0
+
+[Window][planeDesigned]
+Pos=1250,200
+Size=51,32
+Collapsed=0
+
+[Window][large]
+Pos=411,200
+Size=1108,569
+Collapsed=0
+
+[Window][fighter]
+Pos=250,200
+Size=100,48
+Collapsed=0
+
+[Window][cas]
+Pos=500,200
+Size=149,86
+Collapsed=0
+
+[Window][navalBombing]
+Pos=750,200
+Size=135,48
+Collapsed=0
+
+[Window][tacticalBombing]
+Pos=1000,200
+Size=156,67
+Collapsed=0
+
+[Window][strategicBombing]
+Pos=1250,200
+Size=163,86
 Collapsed=0
 
