--- a/Hoi Ultimate Bravery/imgui.ini
+++ b/Hoi Ultimate Bravery/imgui.ini
@@ -39,18 +39,18 @@ Size=142,238
 Collapsed=0
 
 [Window][destroyer]
-Pos=250,200
-Size=114,143
+Pos=411,200
+Size=1108,569
 Collapsed=0
 
 [Window][lightCruiser]
-Pos=500,200
-Size=142,162
+Pos=411,200
+Size=1108,569
 Collapsed=0
 
 [Window][heavyCruiser]
-Pos=500,200
-Size=142,162
+Pos=411,200
+Size=1108,569
 Collapsed=0
 
 [Window][tankDesigned]
@@ -60,7 +60,7 @@ Collapsed=0
 
 [Window][shipDesigned]
 Pos=1000,500
-Size=116,144
+Size=65,32
 Collapsed=0
 
 [Window][options]
@@ -84,8 +84,8 @@ Size=291,540
 Collapsed=0
 
 [Window][battleship]
-Pos=750,200
-Size=142,162
+Pos=411,200
+Size=32,32
 Collapsed=0
 
 [Window][carrier]
@@ -141,5 +141,10 @@ Collapsed=0
 [Window][strategicBombing]
 Pos=1250,200
 Size=163,86
+Collapsed=0
+
+[Window][superHeavyBattleship]
+Pos=411,200
+Size=1108,569
 Collapsed=0
 
