--- a/Hoi Ultimate Bravery/imgui.ini
+++ b/Hoi Ultimate Bravery/imgui.ini
@@ -10,12 +10,12 @@ Collapsed=0
 
 [Window][generate]
 Pos=694,200
-Size=481,279
+Size=481,302
 Collapsed=0
 
 [Window][light]
-Pos=250,200
-Size=163,238
+Pos=411,200
+Size=1108,569
 Collapsed=0
 
 [Window][Light Tank]
@@ -24,18 +24,18 @@ Size=1108,569
 Collapsed=0
 
 [Window][heavy]
-Pos=750,200
-Size=177,238
+Pos=411,200
+Size=1108,569
 Collapsed=0
 
 [Window][medium]
 Pos=500,200
-Size=114,238
+Size=142,238
 Collapsed=0
 
 [Window][modern]
 Pos=1250,200
-Size=142,238
+Size=177,238
 Collapsed=0
 
 [Window][destroyer]
@@ -44,18 +44,18 @@ Size=1108,569
 Collapsed=0
 
 [Window][lightCruiser]
-Pos=411,200
-Size=1108,569
+Pos=500,200
+Size=156,162
 Collapsed=0
 
 [Window][heavyCruiser]
-Pos=411,200
-Size=1108,569
+Pos=500,200
+Size=191,162
 Collapsed=0
 
 [Window][tankDesigned]
 Pos=250,200
-Size=44,32
+Size=116,144
 Collapsed=0
 
 [Window][shipDesigned]
@@ -75,32 +75,32 @@ Collapsed=0
 
 [Window][superHeavy]
 Pos=1000,200
-Size=156,238
+Size=184,238
 Collapsed=0
 
 [Window][generateAll]
-Pos=60,60
-Size=291,540
+Pos=93,-13
+Size=154,540
 Collapsed=0
 
 [Window][battleship]
-Pos=411,200
-Size=32,32
+Pos=750,200
+Size=142,200
 Collapsed=0
 
 [Window][carrier]
 Pos=1000,200
-Size=142,124
+Size=142,181
 Collapsed=0
 
 [Window][submarine]
 Pos=1250,200
-Size=114,67
+Size=114,86
 Collapsed=0
 
 [Window][battlecruiser]
 Pos=750,200
-Size=142,162
+Size=142,219
 Collapsed=0
 
 [Window][small]
@@ -120,31 +120,41 @@ Collapsed=0
 
 [Window][fighter]
 Pos=250,200
-Size=100,48
+Size=100,86
 Collapsed=0
 
 [Window][cas]
 Pos=500,200
-Size=149,86
+Size=156,48
 Collapsed=0
 
 [Window][navalBombing]
 Pos=750,200
-Size=135,48
+Size=135,67
 Collapsed=0
 
 [Window][tacticalBombing]
 Pos=1000,200
-Size=156,67
+Size=156,48
 Collapsed=0
 
 [Window][strategicBombing]
 Pos=1250,200
-Size=163,86
+Size=163,67
 Collapsed=0
 
 [Window][superHeavyBattleship]
+Pos=750,200
+Size=191,257
+Collapsed=0
+
+[Window][##]
 Pos=411,200
 Size=1108,569
+Collapsed=0
+
+[Window][error]
+Pos=960,200
+Size=32,32
 Collapsed=0
 
