refacto new design

--- a/Hoi Ultimate Bravery/imgui.ini
+++ b/Hoi Ultimate Bravery/imgui.ini
@@ -5,12 +5,12 @@ Collapsed=0
 
 [Window][Main Window]
 Pos=0,0
-Size=1920,1061
+Size=1920,1080
 Collapsed=0
 
 [Window][generate]
-Pos=694,200
-Size=481,302
+Pos=760,200
+Size=1920,1080
 Collapsed=0
 
 [Window][light]
@@ -55,12 +55,12 @@ Collapsed=0
 
 [Window][tankDesigned]
 Pos=250,200
-Size=116,144
+Size=44,32
 Collapsed=0
 
 [Window][shipDesigned]
 Pos=1000,500
-Size=116,144
+Size=65,32
 Collapsed=0
 
 [Window][options]
@@ -110,7 +110,7 @@ Collapsed=0
 
 [Window][planeDesigned]
 Pos=1250,200
-Size=193,144
+Size=51,32
 Collapsed=0
 
 [Window][large]
@@ -155,6 +155,11 @@ Collapsed=0
 
 [Window][error]
 Pos=960,200
+Size=32,32
+Collapsed=0
+
+[Window][mainMenu]
+Pos=150,200
 Size=32,32
 Collapsed=0
 
